# lithium

./: .gitignore  README.md  pyproject.toml
src/lithium/: canonical.py  cli.py  fetch.py  inspector.py  interactive.py  llm.py  manifest.py  models.py  reports.py  rules.py  scan.py  scoring.py
tests/: test_lithium.py
tests/fixtures/: bad_stdout_server.py  clean_stdio_server.py  echo_request_server.py  env_reporting_stdio_server.py  env_static_stdio_server.py  http_server.py  mcp_stdio_fixture.py  noisy_stdio_server.py  stdio_server.py
