[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lithium"
version = "0.1.0"
description = "Local-first MCP trust scanner and signed manifest generator."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "security", "scanner", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "cryptography>=41",
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
llm = [
  "openai>=1.0",
]

[project.scripts]
lithium = "lithium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
